--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+@import "tailwindcss";
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -17,5 +14,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Atkinson Hyperlegible", sans-serif;
 }
